Terminado mi portafolio, listo para buscar trabajo!!

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,8 +33,8 @@
         </div>
         <div class="center full-width social-links">
             <div class="row">
-                <a href="#"><img src="{{ url_for('static', filename= 'linkedin.png' ) }}" alt="" class="social" width=30></a>
-                <a href="#"><img src="{{ url_for('static', filename= 'mastodon.png' ) }}" alt="" class="social" width=30></a>
+                <a href="https://www.linkedin.com/in/diego-eduardo-guzm%C3%A1n-oropeza-b2700b242/"><img src="{{ url_for('static', filename= 'linkedin.png' ) }}" alt="" class="social" width=30></a>
+                <a href="https://masto.es/@guzman73"><img src="{{ url_for('static', filename= 'mastodon.png' ) }}" alt="" class="social" width=30></a>
             </div>
         </div>
         <div class="made-with">
