--- a/app/templates/portfolio/section-second.html
+++ b/app/templates/portfolio/section-second.html
@@ -13,13 +13,13 @@
             <div class="card third">
                 <h3>Gestor de clientes</h3>
                 <p>Una aplicación que nos ayuda a gestionar clientes.</p>
-                <a href="#" class="purple">Link aquí</a>
+                <a href="{{ url_for('static', filename='clientNotebook.exe') }}" class="purple">Link aquí</a>
             </div>
 
             <div class="card third">
                 <h3>Gestor de tareas</h3>
                 <p>Es una aplicación para gestionar tareas de forma simple.</p>
-                <a href="#" class="purple">Link aquí</a>
+                <a href="{{ url_for('static', filename='db.exe') }}" class="purple">Link aquí</a>
             </div>
 
         </div>
